Fixed bug with collapse "create quote"
- There was a bug when you signed back in that you couldn't create a
quote, so I fixed this bug.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -75,7 +75,7 @@ h4.open-screen {
 #user-message,
 #daily-inspiration,
 #quotes-display,
-.card {
+.create {
   background-color: $background;
   float: none;
   text-align: center;
@@ -83,11 +83,15 @@ h4.open-screen {
 
 #daily-inspiration,
 #quotes-display,
-.card {
+.create {
   border-radius: 20px;
   color: $grey;
   margin: 30px auto;
   width: 800px;
+}
+
+.create {
+  padding: 30px 0;
 }
 
 #user-message {
